@@ -1,5 +1,11 @@
 2007-07-17  Akim Demaille  <demaille@gostai.com>
 
+	Clean up some UConnection::send
+	* src/ucommand.cc: Show what I'd like to write.
+	* src/uconnection.cc (sendPrefix): Factor.
+
+2007-07-17  Akim Demaille  <demaille@gostai.com>
+
 	* src/ucommand.hh, src/ucommand.cc (UCommand_EXPR::execute_function_call): New.
 	Extracted from...
 	(UCommand_EXPR::execute_): here.
